fix overflow

--- a/app/assets/stylesheets/components/_miscellaneous.scss
+++ b/app/assets/stylesheets/components/_miscellaneous.scss
@@ -292,6 +292,10 @@
 .scroll-y{
   overflow-y: scroll !important;
 }
+.hidden-y{
+  overflow-y: hidden !important;
+}
+
 
 .text-ellipsis{
   text-overflow: ellipsis !important;
